# wesnothanalytics

./: .gitignore  MANIFEST.in  README.MD  pyproject.toml  setup.py
wesnothanalytics/: __init__.py  classes.py  main.py  util.py
wesnothanalytics/configs/: flags.json  unit_db.json
