[project]
name = "wesnothanalytics"
version = "0.0.6"
authors = [
  { name="Dark Adept", email="wesnothanalytics@gmail.com" },
]
description = "A simple replay file parser for the game 'Battle for Wesnoth'"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dark-adept/wesnothanalytics"